# Mushroom

./: .gitignore  README.md  com.github.azab246.mushroom.json  com.github.azab246.mushroom.json~  meson.build
.flatpak/: meson.sh
.flatpak/finalized-repo/: metadata
.flatpak/finalized-repo/files/share/appdata/: com.github.azab246.mushroom.appdata.xml
.flatpak/finalized-repo/files/share/applications/: com.github.azab246.mushroom.desktop
.flatpak/finalized-repo/files/share/glib-2.0/schemas/: com.github.azab246.mushroom.gschema.xml  gschemas.compiled
.flatpak/finalized-repo/files/share/mushroom/mushroom/: main.py
.flatpak/flatpak-builder/cache/refs/heads/x86_64-home_2Fabdalrahmanazab_2FProjects_2FMushroom_2Fcom.github.azab246.mushroom.json/: build-python3-pytube  init
.flatpak/flatpak-builder/checksums/: x86_64-com.github.azab246.mushroom.json
.flatpak/ostree-repo/: summary  summary.idx
.flatpak/ostree-repo/refs/heads/app/com.github.azab246.mushroom/x86_64/: master
.flatpak/ostree-repo/summaries/: 4e0307c207d4153fd8801e9b3423ef3d07980df98c0a85ccc41e806719273a31-5625c6ab57e67b63501694afae08b84cada088a9707cb329f3e2d3d49e2fe79a.delta
.flatpak/repo/files/share/icons/hicolor/: icon-theme.cache
.flatpak/repo/files/share/mushroom/: mushroom.gresource
data/: com.github.azab246.mushroom.appdata.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  mushroom.gresource.xml  mushroom.in
src/gtk/: about.ui.in  meson.build  mushroom.gresource.xml  preferences.ui  quit-dialog_TEMP_.ui  window.ui
src/gtk/res/: style.css
src/res/: style.css
