project('mushroom',
          version: '0.1.0',
    meson_version: '>= 0.59.0',
  default_options: [ 'warning_level=2',
                     'werror=false',
                   ],
)

i18n = import('i18n')

gnome = import('gnome')

python = import('python')


python_bin = python.find_installation('python3', modules: 'pytube')


dependencies = [
	dependency('gtk4'),
	dependency('libadwaita-1'),
]



subdir('data')
subdir('src')
subdir('po')

gnome.post_install(
  glib_compile_schemas: true,
  gtk_update_icon_cache: true,
  update_desktop_database: true,
)
